--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ font-family: 'Solitreo', cursive;
 .block {
     display: block !important;
 }
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
 .cancel-background {
     position: absolute;
     top: 0;
